# forgeflow

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  INSTALL.md  Makefile  README.md  README_en.md  SKILL.md  benchmark-report.md  extension.json  gemini-extension.json  install-roach.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: AGENTS.md  plugin.json
.cursor-plugin/: plugin.json
adapters/: manifest.schema.json
docs/: 2026-06-thin-harness-analysis.md  adapter-config.md  adapter-layout.md  adapter-model.md  advisory-guidelines.md  ai-team-forgeflow-handoff.md  api.md  architecture.md  artifact-model.md  checkpoint-model.md  ci.md  codex-desktop.md  coding-convention.md  contract-design-model.md  contract-map.md  design-interface-model.md  developer-handoff-template.md  diet-plan.md  discipline-heuristics-decision.md  dogfooding.md  evaluation-guide.md  evolution-model.md  external-skill-ingestion-model.md  forgeflow-standalone-review-plan.md  gajae-code-absorption-analysis.md  harness-v1-principles.md  hook-setup.md  implementation-plan.md  ledger-model.md  local-loop-runtime-contract.md  local-loop-runtime-roadmap.md  long-run-model.md  maintainer-backlog.md  mcp-tool-use-design.md  milestone-planning-decision.md  oh-my-agent-absorption-review.md  oh-my-agent-forgeflow-handoff.md  operator-shell.md  ouroboros-forgeflow-handoff.md  parallel-work.md  (+21 more)
evals/: README.md  evals.json
examples/: end-to-end-nextjs-flow.md
forgeflow-workspace/: trigger-eval.json
forgeflow_runtime/: __init__.py  (+65 more)
(+769 files in other folders)
