[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow-runtime"
version = "0.7.4"
description = "Artifact-first delivery harness runtime for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "gimso2x" }
]
dependencies = [
  "jsonschema>=4.0",
  "PyYAML>=6.0",
]
keywords = ["ai-agents", "delivery-harness", "workflow", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/gimso2x/forgeflow"
Repository = "https://github.com/gimso2x/forgeflow"
Issues = "https://github.com/gimso2x/forgeflow/issues"

[project.scripts]
forgeflow = "scripts.run_orchestrator:main"
forgeflow-runtime = "scripts.run_orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forgeflow_runtime*", "scripts*"]
exclude = ["tests*", "examples*", "docs*"]
